--- a/templates/Jasmine.xml
+++ b/templates/Jasmine.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <templateSet group="Jasmine">
-  <template name="des" value="describe(&quot;$VAR0$&quot;, function() {&#10;$END$&#10;});" description="Describe Jasmine" toReformat="true" toShortenFQNames="true">
+  <template name="des" value="describe('$VAR0$', function() {&#10;$END$&#10;});" description="Describe Jasmine" toReformat="true" toShortenFQNames="true">
     <variable name="VAR0" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="false" />
@@ -26,7 +26,7 @@
       <option name="OTHER" value="false" />
     </context>
   </template>
-  <template name="it" value="it(&quot;$VAL0$&quot;, function() {&#10;    $END$&#10;});" description="it" toReformat="true" toShortenFQNames="true">
+  <template name="it" value="it('$VAL0$', function() {&#10;    $END$&#10;});" description="it" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="description" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="false" />
@@ -601,7 +601,7 @@
       <option name="OTHER" value="false" />
     </context>
   </template>
-  <template name="s" value="spyOn($VAL0$, &quot;$VAL1$&quot;)$END$;&#10;" description="spy on" toReformat="true" toShortenFQNames="true">
+  <template name="s" value="spyOn($VAL0$, '$VAL1$')$END$;&#10;" description="spy on" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -628,7 +628,7 @@
       <option name="OTHER" value="false" />
     </context>
   </template>
-  <template name="sr" value="spyOn($VAL0$, &quot;$VAL1$&quot;).andReturn($VAL2$);$END$&#10;" description="spy on and return" toReformat="true" toShortenFQNames="true">
+  <template name="sr" value="spyOn($VAL0$, '$VAL1$').andReturn($VAL2$);$END$&#10;" description="spy on and return" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL2" expression="" defaultValue="" alwaysStopAt="true" />
@@ -656,7 +656,7 @@
       <option name="OTHER" value="false" />
     </context>
   </template>
-  <template name="st" value="spyOn($VAL0$, &quot;$VAL1$&quot;).andThrow($VAL2);$END$&#10;" description="spy on and throw" toReformat="true" toShortenFQNames="true">
+  <template name="st" value="spyOn($VAL0$, '$VAL1$').andThrow($VAL2);$END$&#10;" description="spy on and throw" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -683,7 +683,7 @@
       <option name="OTHER" value="false" />
     </context>
   </template>
-  <template name="sct" value="spyOn($VAL0$, &quot;$VAL1&quot;).andCallThrough();$END$&#10;" description="spy on and call through" toReformat="true" toShortenFQNames="true">
+  <template name="sct" value="spyOn($VAL0$, '$VAL1').andCallThrough();$END$&#10;" description="spy on and call through" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_CODE" value="false" />
@@ -709,7 +709,7 @@
       <option name="OTHER" value="false" />
     </context>
   </template>
-  <template name="scf" value="spyOn($VAL0, &quot;$VAL1$&quot;).andCallFake($VAL2$);$END$&#10;" description="spy on and call fake" toReformat="true" toShortenFQNames="true">
+  <template name="scf" value="spyOn($VAL0, '$VAL1$').andCallFake($VAL2$);$END$&#10;" description="spy on and call fake" toReformat="true" toShortenFQNames="true">
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -762,60 +762,6 @@
       <option name="OTHER" value="false" />
     </context>
   </template>
-  <template name="escw" value="expect($VAL0$).wasCalledWith($VAL1$);$END$&#10;" description="expect was called with" toReformat="true" toShortenFQNames="true">
-    <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_CODE" value="false" />
-      <option name="JAVA_COMMENT" value="false" />
-      <option name="JAVA_STRING" value="false" />
-      <option name="COMPLETION" value="false" />
-      <option name="HTML_TEXT" value="false" />
-      <option name="HTML" value="false" />
-      <option name="XSL_TEXT" value="false" />
-      <option name="XML" value="false" />
-      <option name="CSS" value="false" />
-      <option name="JSP" value="false" />
-      <option name="JAVA_SCRIPT" value="true" />
-      <option name="SQL" value="false" />
-      <option name="PHP" value="false" />
-      <option name="GROOVY" value="false" />
-      <option name="MAVEN" value="false" />
-      <option name="ASPECTJ" value="false" />
-      <option name="ACTION_SCRIPT" value="false" />
-      <option name="MXML" value="false" />
-      <option name="GSP" value="false" />
-      <option name="HAML" value="false" />
-      <option name="OTHER" value="false" />
-    </context>
-  </template>
-  <template name="notsc" value="expect($VAL0$).wasNotCalled();$END$&#10;" description="expect was not called" toReformat="true" toShortenFQNames="true">
-    <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
-    <context>
-      <option name="JAVA_CODE" value="false" />
-      <option name="JAVA_COMMENT" value="false" />
-      <option name="JAVA_STRING" value="false" />
-      <option name="COMPLETION" value="false" />
-      <option name="HTML_TEXT" value="false" />
-      <option name="HTML" value="false" />
-      <option name="XSL_TEXT" value="false" />
-      <option name="XML" value="false" />
-      <option name="CSS" value="false" />
-      <option name="JSP" value="false" />
-      <option name="JAVA_SCRIPT" value="true" />
-      <option name="SQL" value="false" />
-      <option name="PHP" value="false" />
-      <option name="GROOVY" value="false" />
-      <option name="MAVEN" value="false" />
-      <option name="ASPECTJ" value="false" />
-      <option name="ACTION_SCRIPT" value="false" />
-      <option name="MXML" value="false" />
-      <option name="GSP" value="false" />
-      <option name="HAML" value="false" />
-      <option name="OTHER" value="false" />
-    </context>
-  </template>
-  <template name="notscw" value="expect($VAL0$).wasNotCalledWith($VAL1$);$END$" description="expect was not called with" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
